--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,3 @@
-/*
-
-    Template Author : pixelhint.com
-    Author Email    : contact@pixelhint.com
-    Template Name   : Magnetic
-    
-    
-    *****************************************
-    
-    
-    - Fonts
-    - General CSS
-    - Header
-    - Home/portfolio 
-    - Inner page 
-    - Map/Contact page  
-    - Tooltip 
-    - Responsive code
-  
-    
-*/
-
-
-
 /*  Fonts  */
 @font-face {
     font-family: 'raleway-regular';
@@ -61,7 +37,11 @@
 
 }
 
+.fond {
+	font-family: "Times New Roman";
+	font-size: large;
 
+}
 
 /*  General CSS*/
 body{
@@ -158,6 +138,10 @@ h5, h6          { font-weight: bolder }
     header nav ul li a:hover,
     header nav ul li a.selected{
         color: #969595;
+    }
+
+    .selected {
+	 font-size: 25px;	
     }
 
     header .footer{
